; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/panfrost/extr_panfrost_mmu.c_write_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/panfrost/extr_panfrost_mmu.c_write_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.panfrost_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.panfrost_device*, i32, i32)* @write_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_cmd(%struct.panfrost_device* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.panfrost_device*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.panfrost_device* %0, %struct.panfrost_device** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.panfrost_device*, %struct.panfrost_device** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @wait_ready(%struct.panfrost_device* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %19, label %13

13:                                               ; preds = %3
  %14 = load %struct.panfrost_device*, %struct.panfrost_device** %4, align 8
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @AS_COMMAND(i32 %15)
  %17 = load i32, i32* %6, align 4
  %18 = call i32 @mmu_write(%struct.panfrost_device* %14, i32 %16, i32 %17)
  br label %19

19:                                               ; preds = %13, %3
  %20 = load i32, i32* %7, align 4
  ret i32 %20
}

declare dso_local i32 @wait_ready(%struct.panfrost_device*, i32) #1

declare dso_local i32 @mmu_write(%struct.panfrost_device*, i32, i32) #1

declare dso_local i32 @AS_COMMAND(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
